basic declarations inside a css selector that we can use: background-color, font-size, text-decoration (line-through, underline, none if we have anchor tags since they have a default underline), font-family (make sure its a web safe font), text-align. next selector, p tags: line-height (space between each line), letter-spacing (space between each individual letter), column-count(newspaper like design), column-gap. Moving on to a different element: ul - border-width + border-style (border-width by itself won't don't anything b/c borders are made up of different parts and we need at least 2 of those parts to show properly). The ul is going accross all the way to the end of the page because this is a block level element; border color.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,21 @@
 h1 {
   color: orange;
+  background-color: slategray;
+  font-size: 20px;
+  text-decoration: underline;
+  font-family: arial;
+  text-align: center;
 }
 p {
   color: slategrey;
+  text-align: right;
+  line-height: 30px;
+  letter-spacing: 3px;
+  column-count: 2;
+  column-gap: 60px;
+}
+ul{
+  border-width: 4px;
+  border-style: solid;
+  border-color: crimson;
 }
